--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -79,4 +79,4 @@ jobs:
           username: ${{ secrets.JENKINS_USER }}
           password: ${{ secrets.JENKINS_PASSWORD }}
           customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
-          data: '{"parameter": [{"REPO_HTTP_URL": ${{ github.event.repository.html_url }}, "REPO_BRANCH": ${{ github.ref_name}}, "ASYNCAPI_FILE": ${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}, "BUILD_ENV": "test"}]}'
+          data: '{"parameter":[{"name":"REPO_HTTP_URL","value":"${{ github.event.repository.html_url }}"},{"name":"REPO_BRANCH","value":"${{ github.ref_name}}"},{"name":"ASYNCAPI_FILE","value":"${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}"},{"name":"BUILD_ENV","value":"test"}]}'
