--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -65,18 +65,28 @@ jobs:
         run: echo "Synching file with EP"
       - name: Committing AsyncAPI spec file into repo
         run: echo "Commit file back to repo"
+
+        
   
   # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
   trigger-jenkins:
     needs: asyncapi-present
     runs-on: ubuntu-latest
     steps:
-      - name: REST call to Jenkins
-        uses: fjogeleit/http-request-action@v1
-        with:
+      # - name: REST call to Jenkins
+      #   uses: fjogeleit/http-request-action@v1
+      #   with:
+      #     url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
+      #     method: 'POST'
+      #     username: ${{ secrets.JENKINS_USER }}
+      #     password: ${{ secrets.JENKINS_PASSWORD }}
+      #     customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
+      #     data: '{"parameter":[{"name":"REPO_HTTP_URL","value":"${{ github.event.repository.html_url }}"},{"name":"REPO_BRANCH","value":"${{ github.ref_name}}"},{"name":"ASYNCAPI_FILE","value":"${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}"},{"name":"BUILD_ENV","value":"test"}]}'
+      - name: Trigger Jenkins 
+        uses: enflo/jenkins-action@master
+        with: 
           url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
-          method: 'POST'
-          username: ${{ secrets.JENKINS_USER }}
-          password: ${{ secrets.JENKINS_PASSWORD }}
-          customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
-          data: '{"parameter":[{"name":"REPO_HTTP_URL","value":"${{ github.event.repository.html_url }}"},{"name":"REPO_BRANCH","value":"${{ github.ref_name}}"},{"name":"ASYNCAPI_FILE","value":"${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}"},{"name":"BUILD_ENV","value":"test"}]}'
+          user: ${{ secrets.JENKINS_USER }}
+          token: ${{ secrets.JENKINS_PASSWORD }}
+          job: build-awx-asyncapi-rest
+          parameters: REPO_HTTP_URL=${{ github.event.repository.html_url }}&REPO_BRANCH=${{ github.ref_name}}&ASYNCAPI_FILE=${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}&BUILD_ENV=test
