--- a/workflowFiles/ep-merge.yml
+++ b/workflowFiles/ep-merge.yml
@@ -1,3 +1,20 @@
+# This workflow will be triggered on every commit merge to the defined branch. It involved
+# 1. Checking if an AsyncAPI spec file is present in the commit
+# 2. Import the AsyncAPI spec file to Solace PubSub+ Event Portal
+# 3. Synchronize the custom extensions in the AsyncAPI spec file with Event Portal object ids
+# 4. Trigger a Jenkins job that carries out the provisioning and configuration of the Solace PubSub+ Event broker(s), and promotion of the application on Solace PubSub+ Event Portal
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+# To get started, configure the following in your repos secrets https://docs.github.com/en/actions/security-guides/encrypted-secrets
+# JENKINS_HOST: your Jenkins host
+# JENKINS_USER: your Jenkins user
+# JENKINS_TOKEN: your Jenkins token
+
+
 name: Process post merge
 on:
   push: 
@@ -67,28 +84,17 @@ jobs:
         run: echo "Synching file with EP"
       - name: Committing AsyncAPI spec file into repo
         run: echo "Commit file back to repo"
-
-        
   
   # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
   trigger-jenkins:
     needs: asyncapi-present
     runs-on: ubuntu-latest
     steps:
-      # - name: REST call to Jenkins
-      #   uses: fjogeleit/http-request-action@v1
-      #   with:
-      #     url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
-      #     method: 'POST'
-      #     username: ${{ secrets.JENKINS_USER }}
-      #     password: ${{ secrets.JENKINS_PASSWORD }}
-      #     customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
-      #     data: '{"parameter":[{"name":"REPO_HTTP_URL","value":"${{ github.event.repository.html_url }}"},{"name":"REPO_BRANCH","value":"${{ github.ref_name}}"},{"name":"ASYNCAPI_FILE","value":"${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}"},{"name":"BUILD_ENV","value":"test"}]}'
       - name: Trigger Jenkins 
         uses: enflo/jenkins-action@master
         with: 
           url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
           user: ${{ secrets.JENKINS_USER }}
-          token: ${{ secrets.JENKINS_PASSWORD }}
+          token: ${{ secrets.JENKINS_TOKEN }}
           job: build-awx-asyncapi-rest
           parameters: REPO_HTTP_URL=${{ github.event.repository.html_url }}&REPO_BRANCH=${{ github.ref_name}}&ASYNCAPI_FILE=${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}&BUILD_ENV=test
