--- a/.github/workflows/ep-validate-async.yml
+++ b/.github/workflows/ep-validate-async.yml
@@ -75,6 +75,12 @@ jobs:
       - name: Install asycnapi cli
         run: npm install -g @asyncapi/cli@0.22.2
 
+      - name: List files and path
+        run: |
+          echo "YOLO"
+          pwd
+          ls
+
       # Get all files in PR
       - id: async_spec_present
         uses: jitterbit/get-changed-files@v1
@@ -101,5 +107,5 @@ jobs:
         env: 
           CLI_MODE: test_mode
         run: |
-          npx @solace-labs/ep-async-api-importer -fp {{env.ASYNCAPI_FILE_PATH}} -d ${{ secrets.SOLACE_APPLICATION_DOMAIN }}
+          npx @solace-labs/ep-async-api-importer -fp pwd/{{env.ASYNCAPI_FILE_PATH}} -d ${{ secrets.SOLACE_APPLICATION_DOMAIN }}
         
