--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -74,9 +74,15 @@ jobs:
     needs: asyncapi-present
     runs-on: ubuntu-latest
     steps:
+      - name: List files and path
+        run: |
+          echo "YOLO"
+          pwd
+          ls
+            
       - name: Import AsyncAPI spec file to EP
         run: |
-          npx @solace-labs/ep-async-api-importer -fp ${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}} -d ${{ secrets.SOLACE_APPLICATION_DOMAIN }}
+          npx @solace-labs/ep-async-api-importer -fp pwd/${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}} -d ${{ secrets.SOLACE_APPLICATION_DOMAIN }}
 
   sync-asyncapi-with-ep:
     needs: import-asyncapi-file
@@ -87,16 +93,16 @@ jobs:
       - name: Committing AsyncAPI spec file into repo
         run: echo "Commit file back to repo"
   
-  # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
-  trigger-jenkins:
-    needs: asyncapi-present
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger Jenkins 
-        uses: enflo/jenkins-action@master
-        with: 
-          url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
-          user: ${{ secrets.JENKINS_USER }}
-          token: ${{ secrets.JENKINS_TOKEN }}
-          job: build-awx-asyncapi-rest
-          parameters: REPO_HTTP_URL=${{ github.event.repository.html_url }}&REPO_BRANCH=${{ github.ref_name}}&ASYNCAPI_FILE=${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}&BUILD_ENV=test
+  # # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
+  # trigger-jenkins:
+  #   needs: asyncapi-present
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Trigger Jenkins 
+  #       uses: enflo/jenkins-action@master
+  #       with: 
+  #         url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
+  #         user: ${{ secrets.JENKINS_USER }}
+  #         token: ${{ secrets.JENKINS_TOKEN }}
+  #         job: build-awx-asyncapi-rest
+  #         parameters: REPO_HTTP_URL=${{ github.event.repository.html_url }}&REPO_BRANCH=${{ github.ref_name}}&ASYNCAPI_FILE=${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}&BUILD_ENV=test
