--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -82,8 +82,9 @@ jobs:
       - name: Import AsyncAPI spec file to EP
         env:
           CLI_SOLACE_CLOUD_TOKEN: ${{ secrets.CLI_SOLACE_CLOUD_TOKEN }}
+          CLI_IMPORT_CREATE_API_APPLICATION: true
         run: |
-          npx @solace-labs/ep-async-api-importer -fp ./${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}} -d ${{ secrets.SOLACE_APPLICATION_DOMAIN }}
+          npx @solace-labs/ep-async-api-importer -fp ./${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}} -d "${{ secrets.SOLACE_APPLICATION_DOMAIN }}"
 
   sync-asyncapi-with-ep:
     needs: import-asyncapi-file
