--- a/.github/workflows/ep-merge.yml
+++ b/.github/workflows/ep-merge.yml
@@ -35,7 +35,7 @@ jobs:
           ref: ${{ github.ref }}
             
       - name: Install asycnapi cli
-        run: npm install -g @asyncapi/cli 
+        run: npm install -g @asyncapi/cli@0.24.1 
           
     # Get all files in commit
       - id: files
@@ -95,16 +95,16 @@ jobs:
       - name: Committing AsyncAPI spec file into repo
         run: echo "Commit file back to repo"
   
-  # # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
-  # trigger-jenkins:
-  #   needs: asyncapi-present
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Trigger Jenkins 
-  #       uses: enflo/jenkins-action@master
-  #       with: 
-  #         url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
-  #         user: ${{ secrets.JENKINS_USER }}
-  #         token: ${{ secrets.JENKINS_TOKEN }}
-  #         job: build-awx-asyncapi-rest
-  #         parameters: REPO_HTTP_URL=${{ github.event.repository.html_url }}&REPO_BRANCH=${{ github.ref_name}}&ASYNCAPI_FILE=${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}&BUILD_ENV=test
+  # Trigger awx Jenkins job if an asyncapi spec file is present in commit merge
+  trigger-jenkins:
+    needs: asyncapi-present
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Jenkins 
+        uses: enflo/jenkins-action@master
+        with: 
+          url: 'https://${{ secrets.JENKINS_HOST }}/job/build-awx-asyncapi-rest/buildWithParameters'
+          user: ${{ secrets.JENKINS_USER }}
+          token: ${{ secrets.JENKINS_TOKEN }}
+          job: build-awx-asyncapi-rest
+          parameters: REPO_HTTP_URL=${{ github.event.repository.html_url }}&REPO_BRANCH=${{ github.ref_name}}&ASYNCAPI_FILE=${{needs.asyncapi-present.outputs.ASYNCAPI_FILE_PATH}}&BUILD_ENV=test
