--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Trigger generate implementation 
         run: |
           local id="962368b5c27b7ec5ecfcb4ed8f8c57adb52a8442"
-          curl -XPOST -u "${{ github.actor }}:${{ github.token }}" 
-                      -H "Accept: application/vnd.github.everest-preview+json" \ 
-                      -H "Content-Type: application/json" 
-                      https://api.github.com/repos/${{ github.repository }}/dispatches \
-                      --data "{\"event_type\":\"trigger-event\",\"client_payload\":{\"id\":\"$id\", \"unit\":false,\"integration\":true}}"
+          curl -X POST -u "${{ github.actor }}:${{ github.token }}" \
+            -H "Accept: application/vnd.github.everest-preview+json"  \
+            -H "Content-Type: application/json" \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            --data "{\"event_type\":\"trigger-event\",\"client_payload\":{\"id\":\"$id\", \"unit\":false,\"integration\":true}}"
