--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Trigger generate implementation 
         run: |
           id="962368b5c27b7ec5ecfcb4ed8f8c57adb52a8442"
-          curl -X POST -u "${{ github.actor }}:${{ github.token }}" \
+          curl -X POST -u "${{ github.actor }}:${{ secrets.WORKFLOW_PAT }}" \
             -H "Accept: application/vnd.github.everest-preview+json"  \
             -H "Content-Type: application/json" \
             https://api.github.com/repos/${{ secrets.INFRA_REPO }}/dispatches \
