--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -7,6 +7,8 @@
 
 # To get started, configure the following in your repos secrets https://docs.github.com/en/actions/security-guides/encrypted-secrets
 # INFRA_REPO: the infrastructure repo in the form of <github_user>/<repo_name>
+# WORKFLOW_PAT: Personal Access Token token for the destination repo for authentication. See more here https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
+## Note: The PAT should have workflow access enabled
 
 name: Trigger Generate Implementation
 on:
