--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -21,9 +21,9 @@ jobs:
     steps:
       - name: Trigger generate implementation 
         run: |
-          id="962368b5c27b7ec5ecfcb4ed8f8c57adb52a8442"
+          spec="YOLO"
           curl -X POST -u "${{ github.actor }}:${{ secrets.WORKFLOW_PAT }}" \
             -H "Accept: application/vnd.github.everest-preview+json"  \
             -H "Content-Type: application/json" \
             https://api.github.com/repos/${{ secrets.INFRA_REPO }}/dispatches \
-            --data "{\"event_type\":\"trigger-event\",\"client_payload\":{\"id\":\"$id\", \"unit\":false,\"integration\":true}}"
+            --data "{\"event_type\":\"trigger-event\",\"solace\":{\"asyncapi\":\"$spec\"}}"
