--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -26,4 +26,4 @@ jobs:
             -H "Accept: application/vnd.github.everest-preview+json"  \
             -H "Content-Type: application/json" \
             https://api.github.com/repos/${{ secrets.INFRA_REPO }}/dispatches \
-            --data "{\"event_type\":\"trigger-event\",\"solace\":{\"asyncapi\":\"$spec\"}}"
+            --data "{\"event_type\":\"trigger-event\",\"client_payload\":{\"asyncapi\":\"$spec\"}}"
