--- a/.github/workflows/validate-markdown.yml
+++ b/.github/workflows/validate-markdown.yml
@@ -15,3 +15,13 @@ jobs:
       - name: Install claat
         run: |
           go install github.com/googlecodelabs/tools/claat@latest
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+        with:
+          dir_names: "true"
+
+      - name: list changed files
+        run: |
+          echo ${{steps.changed-files.outputs.modified_files}}
