--- a/.github/workflows/validate-markdown.yml
+++ b/.github/workflows/validate-markdown.yml
@@ -9,13 +9,13 @@ jobs:
     steps:
       - name: Checkout codelabs repo
         uses: actions/checkout@v2
-      - name: Setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.17'
-      - name: Install claat
-        run: |
-          go install github.com/googlecodelabs/tools/claat@latest
+      # - name: Setup Go
+      #   uses: actions/setup-go@v2
+      #   with:
+      #     go-version: '1.17'
+      # - name: Install claat
+      #   run: |
+      #     go install github.com/googlecodelabs/tools/claat@latest
 
       - name: Get changed files
         id: changed-files
@@ -23,44 +23,44 @@ jobs:
         with:
           dir_names: "true"
           files: |
-            markdown/*.md
+            markdown/**
       
-      - name: Run step if any file(s) in the docs folder change
+      - name: Run step if any file(s) in the markdown folder change
         if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
-          echo "One or more files in the docs folder has changed."
+          echo "One or more files in the markdown folder has changed."
           echo "List all the files that have changed: ${{ steps.changed-files.outputs.all_changed_files }}"
 
-      - name: Validate .md files against claat
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "YOLO"
-            echo $file
-            cd $file
-            ls
-            ./export
-          done
+      # - name: Validate .md files against claat
+      #   run: |
+      #     for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+      #       echo "YOLO"
+      #       echo $file
+      #       cd $file
+      #       ls
+      #       ./export
+      #     done
 
-      - name: Checkout codelabs Site repo
-        uses: actions/checkout@v2
-        with:
-          repository: SolaceDev/solace-dev-codelabs-site
-          path: codelabs-site
-          submodules: recursive
+      # - name: Checkout codelabs Site repo
+      #   uses: actions/checkout@v2
+      #   with:
+      #     repository: SolaceDev/solace-dev-codelabs-site
+      #     path: codelabs-site
+      #     submodules: recursive
           
-      - name: Install node 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.16.2
+      # - name: Install node 12.x
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 12.16.2
         
-      - name: build site with new files
-        run: | 
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo $file
-            # cp -r codelabs/$file codelabs-site/site/solace-dev-codelabs
-            # cd codelabs-site/site/solace-dev-codelabs/$file
-            # ./export
-          done
+      # - name: build site with new files
+      #   run: | 
+      #     for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+      #       echo $file
+      #       # cp -r codelabs/$file codelabs-site/site/solace-dev-codelabs
+      #       # cd codelabs-site/site/solace-dev-codelabs/$file
+      #       # ./export
+      #     done
         
         
         
