--- a/.github/workflows/validate-markdown.yml
+++ b/.github/workflows/validate-markdown.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout codelabs repo
         uses: actions/checkout@v2
+      - name: list files
+        run: ls
       # - name: Setup Go
       #   uses: actions/setup-go@v2
       #   with:
