--- a/.github/workflows/validate-markdown.yml
+++ b/.github/workflows/validate-markdown.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v35
-        with:
-          dir_names: "true"
-          files: |
-            markdown/**
+        # with:
+        #   dir_names: "true"
+        #   files: |
+        #     markdown/**
       
       - name: Run step if any file(s) in the markdown folder change
         if: steps.changed-files-specific.outputs.any_changed == 'true'
