--- a/.github/workflows/validate-markdown.yml
+++ b/.github/workflows/validate-markdown.yml
@@ -21,9 +21,8 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v35
         with:
-          diff_relative: codelabs
           files: |
-            markdown/**
+            markdown/*.md
       
       - name: List all changed files
         run: |
