--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -22,6 +22,11 @@ jobs:
   get-application-version-id:
       runs-on: ubuntu-latest
       steps:
+        - name: Setup node
+          uses: actions/setup-node@v3
+          with: 
+            node-version: '16'
+            
         - name: Checkout Current Branch
           uses: actions/checkout@master
           with:
