--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -16,8 +16,8 @@ on:
 
 env:
   CANCEL_WORKFLOW: false
-  APPLICATION_VERSION_ID: " "
-  TARGET_MES: " "
+  APPLICATION_VERSION_ID:
+  TARGET_MES:
 jobs:
   get-application-version-id:
       runs-on: ubuntu-latest
@@ -35,6 +35,8 @@ jobs:
       # Get all files in commit
         - id: files
           uses: jitterbit/get-changed-files@v1
+          with: 
+            format: ''
 
         - name: Check if an AsycnAPI file is in commit
           run: |
