--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -36,7 +36,7 @@ jobs:
         - id: files
           uses: jitterbit/get-changed-files@v1
           with: 
-            format: ''
+            format: 'json'
 
         - name: Check if an AsycnAPI file is in commit
           run: |
