--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -44,10 +44,12 @@ jobs:
             for changed_file in ${{ steps.files.outputs.all }}
             do
               if [[ ( ${changed_file} == *.yaml ) || ( ${changed_file} == *.yml )]]
+              then
                 # applicationVersionIDs += (awk '/x-ep-application-version-id: \"/,/\"/'  ${changed_file} | cut -d'"' -f 2)
                 APPLICATION_VERSION_IDS = awk '/x-ep-application-version-id: \"/,/\"/'  ${changed_file} | cut -d'"' -f 2
               fi
               if [[ ( ${changed_file} == *.json )]]
+              then
                 echo "To implement JSON parsing"
               fi
             done
